--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "joi": "^17.10.1",
     "langchain": "^0.0.141",
     "node-xlsx": "^0.23.0"
   },
