--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "joi": "^17.10.1",
     "langchain": "^0.0.141",
-    "node-xlsx": "^0.23.0"
+    "node-xlsx": "^0.23.0",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
